// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Venue Marker Tooltip should not render any data 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1pind18-12 bvfHfc"
  >
    <div
      class="styledComponents__InfoWindowHeader-sc-1pind18-17 bjtQAp"
    >
      <a
        class="styledComponents__Title-sc-1pind18-18 jykFWA"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-12 kybRWx"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-scroll-horizontal"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="width: 100%; min-width: 100%; table-layout: auto;"
                        >
                          <colgroup>
                            <col
                              style="width: 75px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              />
                              <th
                                class="ant-table-cell"
                              >
                                Networking Devices
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Clients
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Wi-Fi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No APs
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No AP clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Switch
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switches
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switch clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                SmartEdge
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No SmartEdges
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Venue Marker Tooltip should render tooltip without padding 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1pind18-12 hyrgQR"
  >
    <div
      class="styledComponents__InfoWindowHeader-sc-1pind18-17 bjtQAp"
    >
      <a
        class="styledComponents__Title-sc-1pind18-18 jykFWA"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-12 kybRWx"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-scroll-horizontal"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="width: 100%; min-width: 100%; table-layout: auto;"
                        >
                          <colgroup>
                            <col
                              style="width: 75px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              />
                              <th
                                class="ant-table-cell"
                              >
                                Networking Devices
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Clients
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Wi-Fi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No APs
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No AP clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Switch
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switches
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switch clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                SmartEdge
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-1pind18-13 styledComponents__TextWrapper-sc-1pind18-16 cmNdJX jQqcBk"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No SmartEdges
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
